[package]
name = "ddc_check"
version = "0.1.0"
edition = "2021"

[dependencies]
ddc-hi = "0.4"
sha2 = "0.10"
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
]}

[build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true